# arcane-benchs

./: CMakeLists.txt
.github/workflows/: tests_release.yml
mahyco/src/accenv/: AcceleratorUtils.h
mahyco/src/msgpass/: GlobalSynchronizeDevQueues.cc
microhydro/: .clang-format  .gitignore
microhydro/src/: CMakeLists.txt  MicroHydro.arc  MicroHydro2D.arc  MicroHydro3D.arc  MicroHydroModule.cc
microhydro/src/connectivix/: BinningAlt.cc  CSR.cc  CSR.h  ConnectivityEWise.h  ConnectivityEWiseMatMul.cc  ConnectivityEWiseMatMul.h  ConnectivityEWiseMatSub.cc  ConnectivityEWiseMatSub.h  ConnectivityMatMul.cc  ConnectivityMatMul.h  ConnectivityMatMulBinning.cc  ConnectivityMatMulNumeric.cc  ConnectivityMatMulSymbolic.cc  ConnectivityMatrix.h  ConnectivityTranspose.cc  ConnectivityTranspose.h  ConnectivityVector.h  ItemIterator.h  ItemVectorBase.h  Metadata.cc  Metadata.h  define.h
